--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <div class="root">
         <div class="left_panel" id="left_panel">
             <img class="photo" id="photo" src="./resources/images/foto.jpg">
-            <div class="name">Ezequiel Agustín García Bat</div>
+            <div class="name">Ezequiel García Bat</div>
             <div class="line"></div>
             <div class="info_container">
-                <div class="info">e2016garbat@protonmail.com</div>
-                <div class="info">+59891743272</div>
+                <div class="info">e----gar---@protonmail.com</div>
+                <div class="info">+5989174----</div>
             </div>
         </div>
         <div class="right_panel">
